Issue #3278033: Add transparency layer behind images in Media Library

--- a/styles/helpers/_tools.scss
+++ b/styles/helpers/_tools.scss
@@ -13,6 +13,25 @@
   word-wrap: normal;
 }
 
+@mixin color-pattern {
+  background-color: var(--colorGinPatternFallback);
+  background-image:
+    linear-gradient(-45deg, var(--colorGinPattern) 25%, transparent 26%),
+    linear-gradient(-45deg, var(--colorGinPattern) 25%, transparent 26%),
+    linear-gradient(135deg, var(--colorGinPattern) 25%, transparent 26%),
+    linear-gradient(135deg, var(--colorGinPattern) 25%, transparent 26%);
+  background-position:
+    0 0,
+    var(--ginSizePatternSquare) var(--ginSizePatternSquare),
+    var(--ginSizePatternSquare) var(--ginSizePatternSquare),
+    0 0;
+  background-size: calc(var(--ginSizePatternSquare) * 2) calc(var(--ginSizePatternSquare) * 2);
+
+  @media screen and (-ms-high-contrast: active) {
+    background: none;
+  }
+}
+
 @mixin custom-icon-button($name) {
   all: unset;
 
